practice/Ingress/my-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: my-app

  template:
    metadata:
      labels:
        app: my-app

    spec:
      containers:
      - name: my-app-container
        image: nginx
        ports:
        - containerPort: 80
