practice/Ingress/my-app-service.yml
apiVersion: v1
kind: Service

metadata:
  name: my-app-service

spec:
  selector:
    app: my-app

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
