practice/Ingress/my-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-app-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: myapp.loc

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: my-app-service
            port:
              number: 80
